force-app/main/default/objects/Opportunity/fields/Sales_conditions__c.field-meta.xml
<CustomField>
    <fullName>Sales_conditions__c</fullName>
    <label>Sales conditions</label>
    <type>TextArea</type>
</CustomField>