force-app/main/default/objects/Opportunity/fields/Second_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Second_Rate_Code__c</fullName>
    <label>Second Rate Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>