force-app/main/default/objects/Opportunity/fields/Stage_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Close_Date__c</fullName>
    <label>Stage Close Date</label>
    <type>Date</type>
</CustomField>