force-app/main/default/objects/Opportunity/fields/tech_ParentExternalId__c.field-meta.xml
<CustomField>
    <fullName>tech_ParentExternalId__c</fullName>
    <label>tech_ParentExternalId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>