force-app/main/default/objects/Opportunity/fields/TechIsNotFirst_01__c.field-meta.xml
<CustomField>
    <fullName>TechIsNotFirst_01__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This tech field is used in the batch Batch_UpdateMB_Nights_Rooms_StageCount</description>
    <label>TechIsNotFirst_01</label>
    <type>Checkbox</type>
</CustomField>