force-app/main/default/objects/Opportunity/fields/Trip_Context__c.field-meta.xml
<CustomField>
    <fullName>Trip_Context__c</fullName>
    <label>Trip Context</label>
    <length>40</length>
    <type>Text</type>
</CustomField>