force-app/main/default/objects/Opportunity/fields/Trip_Reason__c.field-meta.xml
<CustomField>
    <fullName>Trip_Reason__c</fullName>
    <label>Trip Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>