force-app/main/default/objects/Opportunity/fields/Type_city_tax__c.field-meta.xml
<CustomField>
    <fullName>Type_city_tax__c</fullName>
    <label>Type city tax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Inclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>