force-app/main/default/objects/Opportunity/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <label>utm_campaign</label>
    <length>20</length>
    <type>Text</type>
</CustomField>