force-app/main/default/objects/Opportunity/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <label>utm_source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>