force-app/main/default/objects/Opportunity/fields/Wallet_Status__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Status__c</fullName>
    <label>Wallet Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Earned</fullName>
            </value>
            <value>
                <fullName>Burned</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>