force-app/main/default/objects/Opportunity/recordTypes/Booking.recordType-meta.xml
<RecordType>
    <fullName>Booking</fullName>
    <active>true</active>
    <businessProcess>Booking process</businessProcess>
    <label>Booking</label>
</RecordType>