force-app/main/default/objects/Opportunity/recordTypes/Groups.recordType-meta.xml
<RecordType>
    <fullName>Groups</fullName>
    <active>true</active>
    <businessProcess>Business Process</businessProcess>
    <description>Hotels signs contracts with customers who needs to book for a group of people (example: travel agency)</description>
    <label>Groups</label>
</RecordType>