force-app/main/default/objects/Opportunity/recordTypes/Leisure.recordType-meta.xml
<RecordType>
    <fullName>Leisure</fullName>
    <active>true</active>
    <businessProcess>Business Process</businessProcess>
    <label>Leisure</label>
</RecordType>