force-app/main/default/objects/Opportunity/recordTypes/Logee_Card1.recordType-meta.xml
<RecordType>
    <fullName>Logee_Card1</fullName>
    <active>true</active>
    <businessProcess>Business Process</businessProcess>
    <label>Logée card</label>
</RecordType>