force-app/main/default/objects/Opportunity/recordTypes/Master_Booking.recordType-meta.xml
<RecordType>
    <fullName>Master_Booking</fullName>
    <active>true</active>
    <businessProcess>Master booking process</businessProcess>
    <label>Master Booking</label>
</RecordType>