force-app/main/default/objects/Opportunity/recordTypes/Series.recordType-meta.xml
<RecordType>
    <fullName>Series</fullName>
    <active>true</active>
    <businessProcess>Business Process</businessProcess>
    <label>Series</label>
</RecordType>