force-app/main/default/objects/Opportunity/validationRules/VR02_Option_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Option_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
!$User.BypassValidationRule__c , 
  Option_Date__c  &gt;CloseDate 
)</errorConditionFormula>
    <errorDisplayField>Option_Date__c</errorDisplayField>
    <errorMessage>Option Date should be smaller than End Date</errorMessage>
</ValidationRule>