force-app/main/default/objects/Opportunity/validationRules/VR03StartEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03StartEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
!$User.BypassValidationRule__c , 
Start_Date__c &gt;  CloseDate 
)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date should be smaller than End Date</errorMessage>
</ValidationRule>