force-app/main/default/objects/Opportunity/validationRules/VR04_DepartureDateGreaterThanArrivalDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR04_DepartureDateGreaterThanArrivalDate</fullName>
    <active>true</active>
    <description>The depature date should be greater than the arrival date</description>
    <errorConditionFormula>Arrival_Date__c &gt;  Departure_Date__c</errorConditionFormula>
    <errorMessage>The Departure date should be greater than the Arrival date</errorMessage>
</ValidationRule>