force-app/main/default/objects/Opportunity/validationRules/VR05_Booking_DuplicateGuestAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05_Booking_DuplicateGuestAccount</fullName>
    <active>true</active>
    <description>This validation rule to avoid having duplicated guest accounts on the same booking.</description>
    <errorConditionFormula>AND(
	!$User.BypassValidationRule__c ,
	OR(
		AND(
			Guest_Account_1__c  != null,
			OR (
				Guest_Account_1__c  == Guest_Account_2__c,
				Guest_Account_1__c  == Guest_Account_3__c,
				Guest_Account_1__c  == Guest_Account_4__c,
				Guest_Account_1__c  == Guest_Account_5__c
			)
			
		),
		AND(
			Guest_Account_2__c  != null,
			OR (
				Guest_Account_2__c  == Guest_Account_3__c,
				Guest_Account_2__c  == Guest_Account_4__c,
				Guest_Account_2__c  == Guest_Account_5__c
			)
		),
		AND(
			Guest_Account_3__c  != null,
			OR(
				Guest_Account_3__c  == Guest_Account_4__c,
				Guest_Account_3__c  == Guest_Account_5__c
			)
			
		),
		AND(
			Guest_Account_4__c  != null, 
			Guest_Account_4__c  == Guest_Account_5__c
		)
	)

)</errorConditionFormula>
    <errorMessage>Duplicate guest account on the same booking</errorMessage>
</ValidationRule>