force-app/main/default/objects/Opportunity/validationRules/VR_01Restart_date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_01Restart_date</fullName>
    <active>true</active>
    <description>Restart Date &gt; Close date</description>
    <errorConditionFormula>AND( 
!$User.BypassValidationRule__c , 
 Restart_Date__c   &gt; CloseDate
)</errorConditionFormula>
    <errorDisplayField>Restart_Date__c</errorDisplayField>
    <errorMessage>Restart Date should be smaller than End Date</errorMessage>
</ValidationRule>