force-app/main/default/objects/Opportunity/validationRules/VR_MinArrival.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_MinArrival</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Arrival__c &gt;  Max_Departure__c</errorConditionFormula>
    <errorDisplayField>Min_Arrival__c</errorDisplayField>
    <errorMessage>The max departure date must be greater than the min arrival</errorMessage>
</ValidationRule>