force-app/main/default/objects/Opportunity/listViews/All_bookings.listView-meta.xml
<ListView>
    <fullName>All_bookings</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Person_Account__c</columns>
    <columns>Email_AddressBooking__c</columns>
    <columns>Hotel_Name__c</columns>
    <columns>Invoiced_amount__c</columns>
    <columns>Min_Arrival__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Booking</value>
    </filters>
    <label>01- All bookings</label>
</ListView>