force-app/main/default/objects/Opportunity/listViews/All_Master_bookings.listView-meta.xml
<ListView>
    <fullName>All_Master_bookings</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Person_Account__c</columns>
    <columns>Source__c</columns>
    <columns>Distribution__c</columns>
    <columns>Channel__c</columns>
    <columns>Min_Arrival__c</columns>
    <columns>Max_Departure__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Master_Booking</value>
    </filters>
    <label>All Master bookings</label>
</ListView>