force-app/main/default/objects/Opportunity/listViews/X03_All_bookings_in_Italy.listView-meta.xml
<ListView>
    <fullName>X03_All_bookings_in_Italy</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Confirmation_Number__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Person_Account__c</columns>
    <columns>Email_AddressBooking__c</columns>
    <columns>Hotel_Name__c</columns>
    <columns>Invoiced_amount__c</columns>
    <columns>Min_Arrival__c</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Booking</value>
    </filters>
    <filters>
        <field>HotelCountry__c</field>
        <operation>equals</operation>
        <value>IT</value>
    </filters>
    <label>03 - All bookings in Italy</label>
</ListView>